# youversion-suggest-alfred

./: .coveragerc  .editorconfig  .gitignore  .gitmodules  .travis.yml  AGENTS.md  CONTRIBUTING.md  Copy Bible Reference.scpt  LICENSE.txt  README.md  YouVersion Suggest (Alfred 3).alfredworkflow  YouVersion Suggest (Alfred 4).alfredworkflow  YouVersion Suggest (Alfred 5).alfredworkflow  YouVersion Suggest.alfredworkflow  books.json  copy_bible_reference.applescript  get_bible_reference.py  item.xml  open-bible-reference.sh  open_bible_reference.py  packager.json  pyproject.toml  requirements.txt  search-youversion.py  search_bible_reference.py  tasks.py  test.py  yv_suggest.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: tests.yml
test/: test_search_book.py  test_search_chapter.py  test_search_verse.py  test_search_version.py
tests/: __init__.py  conftest.py  context_managers.py  decorators.py  mock_modules.py  module_mocks.py  test_cache.py  test_clear_cache.py  test_compliance.py  test_copy_ref.py  test_filter_prefs.py  test_filter_recent_refs.py  test_filter_refs_book.py  test_filter_refs_chapter.py  test_filter_refs_edge.py  test_filter_refs_feedback.py  test_filter_refs_incomplete.py  test_filter_refs_invalid.py  test_filter_refs_json.py  test_filter_refs_kw.py  test_filter_refs_main.py  test_filter_refs_prefs.py  test_filter_refs_shorthand.py  test_filter_refs_verse.py  test_filter_refs_version.py  test_filter_refs_xml.py  test_get_ref_id.py  test_get_ref_name.py  test_get_ref_url.py  test_google.py  test_mru_stack.py  test_open.py  test_open_reference.py  test_pep8.py  test_preview_ref.py  test_recent_refs.py  test_search_book.py  test_search_chapter.py  test_search_edge.py  test_search_i18n.py  (+19 more)
tests/files/: psa.23.1-2.txt  psa.23.2.txt  psa.23.html  psa.23.txt  search.html
tests/html/: books.html  languages.html  psa.23.html  search.html  versions.html
utilities/: add_language.py  book_parser.py  language_parser.py  update_language.py  update_languages.py  update_workflow.py  version_parser.py
yv_suggest/: __init__.py  build_bible.py  copy_ref.py  filter_prefs.py  filter_recent_refs.py  filter_refs.py  google.py  open.py  search.py  search_ref.py  set_pref.py  set_prefs.py  shared.py  showprefs.py  view_ref.py  yv_suggest.py
yvs/: __init__.py  add_language.py  cache.py  clear_cache.py  copy_ref.py  core.py  customize_refformat.py  customize_refformat.sh  filter_prefs.py  filter_refs.py  filter_refs_kw.py  get_ref_header.py  get_ref_id.py  get_ref_name.py  get_ref_url.py  mru_stack.py  parse_copied_ref.py  preview_ref.py  preview_ref.sh  search_query.py  search_ref.py  search_refs.py  set_pref.py  shared.py  view_ref.py  web.py  yv_parser.py
(+94 files in other folders)
