[project]
name = "youversion-suggest"
version = "15.1.0"
description = "An Alfred workflow which allows you to search the online YouVersion Bible quickly and conveniently. Supports multiple languages, versions, and copy-to-clipboard functionality."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
maintainers = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
license = "MIT"
dependencies = []

[dependency-groups]
dev = []

[tool.ruff]
include = ["**/*.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # isort
    "I",
    # perflint
    "PERF",
    # flake8-executable
    "EXE"
]
