[project]
name = "youversion-suggest"
version = "15.1.0"
description = "An Alfred workflow which allows you to search the online YouVersion Bible quickly and conveniently. Supports multiple languages, versions, and copy-to-clipboard functionality."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
maintainers = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
license = "MIT"
dependencies = []

[dependency-groups]
dev = [
    "alfred-workflow-packager==3.1.1",
    "coverage==7.8.0",
    "nose2==0.15.1",
    "ruff>=0.12.0",
    "tomli==2.2.1",
]

[tool.ruff]
include = ["**/*.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # isort
    "I",
    # perflint
    "PERF",
]
