[project]
name = "youversion-suggest"
version = "15.2.1"
description = "An Alfred workflow which allows you to search the online YouVersion Bible quickly and conveniently. Supports multiple languages, versions, and copy-to-clipboard functionality."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
maintainers = [
    {name = "Caleb Evans", email = "caleb@calebevans.me"}
]
license = "MIT"
dependencies = []

[dependency-groups]
dev = [
    "alfred-workflow-packager==3.1.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.0",
    "tomli>=2.2.1",
]

[tool.pytest.ini_options]
norecursedirs = [
    ".*",
    "build",
    "dist",
    "__pycache__",
    "yvs/data",
]

[tool.ruff]
include = ["**/*.py"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # isort
    "I",
    # perflint
    "PERF",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
]
include = ["yvs/*.py"]
